--- a/www/docs/blog/posts/2023-09-02-welcome.md
+++ b/www/docs/blog/posts/2023-09-02-welcome.md
@@ -25,3 +25,14 @@ You can also subscribe to the [RSS feed](/feed_rss_created.xml)!
 Thanks, I hope you enjoy the new home. 😄
 
 [material-mkdocs]: https://squidfunk.github.io/mkdocs-material/
+
+!!! tip "Guest Posts"
+
+    We are also very happy to accept guest posts!
+
+    If you feel like it, you can open a pull request adding your post to
+    [`./www/docs/blog/posts/`](https://github.com/goreleaser/goreleaser/blob/main/www/docs/blog/posts/),
+    and/or join our [Discord](/d) and discuss in the `blog` channel.
+
+    You may also need to add yourself to
+    [`./www/docs/blog/.authors.yml`](https://github.com/goreleaser/goreleaser/blob/main/www/docs/blog/.authors.yml).
